RESOLVED FIXED121388
CTTE: RenderMedia and RenderVideo are never anonymous.
https://bugs.webkit.org/show_bug.cgi?id=121388
Summary CTTE: RenderMedia and RenderVideo are never anonymous.
Andreas Kling
Reported 2013-09-15 06:36:17 PDT
CTTE: RenderMedia and RenderVideo are never anonymous.
Attachments
Patch (14.83 KB, patch)
2013-09-15 06:36 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-09-15 06:36:56 PDT
Andreas Kling
Comment 2 2013-09-15 07:05:58 PDT
Andreas Kling
Comment 3 2013-09-15 07:11:16 PDT
Reverted r155809 for reason: Accidentally removed files, let's redo this. Committed r155810: <http://trac.webkit.org/changeset/155810>
Andreas Kling
Comment 4 2013-09-15 07:12:57 PDT
Comment on attachment 211704 [details] Patch Clearing flags on attachment: 211704 Committed r155811: <http://trac.webkit.org/changeset/155811>
Andreas Kling
Comment 5 2013-09-15 07:13:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.