CTTE: RenderMedia and RenderVideo are never anonymous. <https://webkit.org/b/121388>

Reviewed by Sam Weinig.

Codify the following:

- RenderMedia always has an HTMLMediaElement.
- RenderVideo always has an HTMLVideoElement.

None of these renderers are ever anonymous, so delete element() and provide
strongly typed reference getters instead.

Canonical link: https://commits.webkit.org/139366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155809 268f45cc-cd09-0410-ab3c-d52691b4dbfc