Source/WebCore/html/HTMLMediaElement.h
@@ -802,11 +802,20 @@ inline bool isMediaElement(Node* node)
     return node && node->isElementNode() && toElement(node)->isMediaElement();
 }
 
+inline HTMLMediaElement& toHTMLMediaElement(Node& node)
+{
+    ASSERT_WITH_SECURITY_IMPLICATION(isMediaElement(&node));
+    return static_cast<HTMLMediaElement&>(node);
+}
+
 inline HTMLMediaElement* toHTMLMediaElement(Node* node)
 {
     ASSERT_WITH_SECURITY_IMPLICATION(!node || isMediaElement(node));
     return static_cast<HTMLMediaElement*>(node);
 }
+
+void toHTMLMediaElement(const HTMLMediaElement&);
+void toHTMLMediaElement(const HTMLMediaElement*);
 
 } //namespace
 
