Source/WebCore/rendering/RenderVideo.h
@@ -31,14 +31,15 @@
 #include "RenderMedia.h"
 
 namespace WebCore {
-    
-class HTMLMediaElement;
+
 class HTMLVideoElement;
 
 class RenderVideo FINAL : public RenderMedia {
 public:
-    RenderVideo(HTMLVideoElement*);
+    explicit RenderVideo(HTMLVideoElement&);
     virtual ~RenderVideo();
+
+    HTMLVideoElement& videoElement() const;
 
     IntRect videoBox() const;
 
@@ -54,8 +55,9 @@ public:
     virtual bool shouldDisplayVideo() const;
 
 private:
+    void mediaElement() const WTF_DELETED_FUNCTION;
+
     virtual void updateFromElement();
-    inline HTMLVideoElement* videoElement() const;
 
     virtual void intrinsicSizeChanged();
     LayoutSize calculateIntrinsicSize();
